updated ng-include path

--- a/app/views/contributors.html
+++ b/app/views/contributors.html
@@ -1,4 +1,4 @@
-<ng-include src="'header.tpl.html'"></ng-include>
+<ng-include src="'/views/header.tpl.html'"></ng-include>
 <div class="jumbotron">
   <h3>{{thisRepo.repo}}</h3>
   <h2>owner: {{thisRepo.owner}}</h2>
