--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<ng-include src="'header.tpl.html'"></ng-include>
+<ng-include src="'/views/header.tpl.html'"></ng-include>
 <div class="jumbotron">
   <h3>Click on a repository to see how their contributors' commits stack up</h3>
   <h2>&ndash; OR &ndash;</h2>
