--- a/app/views/contributors.html
+++ b/app/views/contributors.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="row">
-  <div class="repoBox col-md-4 col-lg-3 col-sm-6" ng-repeat="contributor in contributors | orderBy:'contributions' | filter:search">
+  <div class="repoBox col-md-4 col-lg-3 col-sm-6" ng-repeat="contributor in contributors | orderBy:'contributions':true | filter:search">
     <h3>{{contributor.login}}</h3>
     <h6>Commits: {{contributor.contributions}}</h6>
   </div>
